--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.16.3",
-    "mongoose": "^5.11.17"
+    "marked": "^2.0.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.11.17",
+    "slugify": "^1.4.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
